Regression: Crash during create Viewer node #105720
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#105720
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-6.0.12-76060006-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: AMD Radeon RX 5700 (navi10, LLVM 14.0.0, DRM 3.48, 6.0.12-76060006-generic) AMD 4.6 (Core Profile) Mesa 22.2.0
Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: Unknown Unknown, hash:
2ae9526cd973867d46c7a51054be01ae7f26043b
Worked: (newest version of Blender that worked as expected)
Potentially caused by:
076a33c
Short description of error
If the node was not the top one in the draw order (there are other nodes that overlap it), clicking on that node's socket to call the Viewer node's causes a crash.
Exact steps for others to reproduce the error
In debug build:
CTRL-SHIFT-click
).Expected crash.
Crash, Switching Compositor Viewer node connection of older filesto Regression: Crash, Switching Compositor Viewer node connection of older files@HooglyBoogly Apparently, the composer tree does not have an initialized list of socket positions, if you follow the description
Click on node socket cause re-sorting nodes that clear socket positions. But redrawing didn't happening due to operator doesn't not finished yet and trying to get socket positions.
Possible solutions that i can see:
Call another one node space redrawing after click but before other operator parts.ensure_socket_locations
Do not cause sorting before other steps.Regression: Crash, Switching Compositor Viewer node connection of older filesto Regression: Crash during create Viewer node