Fix #105720: crash when adding viewer node

The crash is fixed by reverting 87fd798ae383a344d51dcbd9f66d5834595bdc5a and
some follow up commits. While it would generally be nice to move to a more
SoA format for these things, we are not there yet and this is causing more
trouble than it's worth currently. The main difficulty is that the socket
indices are changed by many different operations which invalidates the array
too often and led to many follow up bugs.

Pull Request: https://projects.blender.org/blender/blender/pulls/105877