source/blender/editors/space_node/node_draw.cc
@@ -268,9 +268,6 @@ void node_sort(bNodeTree &ntree)
     ntree.runtime->nodes_by_id.add_new(sort_nodes[i]);
     sort_nodes[i]->runtime->index_in_tree = i;
   }
-
-  /* Nodes have been reordered; the socket locations are invalid until the node tree is redrawn. */
-  ntree.runtime->all_socket_locations.clear();
 }
 
 static Array<uiBlock *> node_uiblocks_init(const bContext &C, const Span<bNode *> nodes)
@@ -321,8 +318,7 @@ static void node_update_basis(const bContext &C,
                               const TreeDrawContext & /*tree_draw_ctx*/,
                               bNodeTree &ntree,
                               bNode &node,
-                              uiBlock &block,
-                              MutableSpan<float2> socket_locations)
+                              uiBlock &block)
 {
   PointerRNA nodeptr;
   RNA_pointer_create(&ntree.id, &RNA_Node, &node, &nodeptr);
@@ -392,8 +388,7 @@ static void node_update_basis(const bContext &C,
     buty = min_ii(buty, dy - NODE_DY);
 
     /* Round the socket location to stop it from jiggling. */
-    socket_locations[socket->index_in_tree()] = float2(round(loc.x + NODE_WIDTH(node)),
-                                                       round(dy - NODE_DYS));
+    socket->runtime->location = float2(round(loc.x + NODE_WIDTH(node)), round(dy - NODE_DYS));
 
     dy = buty;
     if (socket->next) {
@@ -525,7 +520,7 @@ static void node_update_basis(const bContext &C,
     buty = min_ii(buty, dy - NODE_DY);
 
     /* Round the socket vertical position to stop it from jiggling. */
-    socket_locations[socket->index_in_tree()] = float2(loc.x, round(dy - NODE_DYS));
+    socket->runtime->location = float2(loc.x, round(dy - NODE_DYS));
 
     dy = buty - multi_input_socket_offset * 0.5;
     if (socket->next) {
@@ -555,7 +550,7 @@ static void node_update_basis(const bContext &C,
 /**
  * Based on settings in node, sets drawing rect info.
  */
-static void node_update_hidden(bNode &node, uiBlock &block, MutableSpan<float2> socket_locations)
+static void node_update_hidden(bNode &node, uiBlock &block)
 {
   int totin = 0, totout = 0;
 
@@ -595,7 +590,7 @@ static void node_update_hidden(bNode &node, uiBlock &block, MutableSpan<float2> 
   for (bNodeSocket *socket : node.output_sockets()) {
     if (socket->is_visible()) {
       /* Round the socket location to stop it from jiggling. */
-      socket_locations[socket->index_in_tree()] = {
+      socket->runtime->location = {
           round(node.runtime->totr.xmax - hiddenrad + sinf(rad) * hiddenrad),
           round(node.runtime->totr.ymin + hiddenrad + cosf(rad) * hiddenrad)};
       rad += drad;
@@ -608,7 +603,7 @@ static void node_update_hidden(bNode &node, uiBlock &block, MutableSpan<float2> 
   for (bNodeSocket *socket : node.input_sockets()) {
     if (socket->is_visible()) {
       /* Round the socket location to stop it from jiggling. */
-      socket_locations[socket->index_in_tree()] = {
+      socket->runtime->location = {
           round(node.runtime->totr.xmin + hiddenrad + sinf(rad) * hiddenrad),
           round(node.runtime->totr.ymin + hiddenrad + cosf(rad) * hiddenrad)};
       rad += drad;
@@ -1188,7 +1183,6 @@ void node_socket_add_tooltip(const bNodeTree &ntree, const bNodeSocket &sock, ui
 
 static void node_socket_draw_nested(const bContext &C,
                                     const bNodeTree &ntree,
-                                    const Span<float2> socket_locations,
                                     PointerRNA &node_ptr,
                                     uiBlock &block,
                                     const bNodeSocket &sock,
@@ -1200,7 +1194,7 @@ static void node_socket_draw_nested(const bContext &C,
                                     const float size,
                                     const bool selected)
 {
-  const float2 location = socket_locations[sock.index_in_tree()];
+  const float2 location = sock.runtime->location;
 
   float color[4];
   float outline_color[4];
@@ -1402,7 +1396,6 @@ static void node_draw_shadow(const SpaceNode &snode,
 static void node_draw_sockets(const View2D &v2d,
                               const bContext &C,
                               const bNodeTree &ntree,
-                              const Span<float2> socket_locations,
                               const bNode &node,
                               uiBlock &block,
                               const bool draw_outputs,
@@ -1462,7 +1455,6 @@ static void node_draw_sockets(const View2D &v2d,
 
     node_socket_draw_nested(C,
                             ntree,
-                            socket_locations,
                             node_ptr,
                             block,
                             *sock,
@@ -1489,7 +1481,6 @@ static void node_draw_sockets(const View2D &v2d,
 
       node_socket_draw_nested(C,
                               ntree,
-                              socket_locations,
                               node_ptr,
                               block,
                               *sock,
@@ -1528,7 +1519,6 @@ static void node_draw_sockets(const View2D &v2d,
         if (select_all || (sock->flag & SELECT)) {
           node_socket_draw_nested(C,
                                   ntree,
-                                  socket_locations,
                                   node_ptr,
                                   block,
                                   *sock,
@@ -1556,7 +1546,6 @@ static void node_draw_sockets(const View2D &v2d,
         if (select_all || (sock->flag & SELECT)) {
           node_socket_draw_nested(C,
                                   ntree,
-                                  socket_locations,
                                   node_ptr,
                                   block,
                                   *sock,
@@ -1602,7 +1591,7 @@ static void node_draw_sockets(const View2D &v2d,
     node_socket_color_get(C, ntree, node_ptr, *socket, color);
     node_socket_outline_color_get(socket->flag & SELECT, socket->type, outline_color);
 
-    const float2 location = socket_locations[socket->index_in_tree()];
+    const float2 location = socket->runtime->location;
     node_socket_draw_multi_input(color, outline_color, width, height, location);
   }
 }
@@ -2109,7 +2098,6 @@ static void node_draw_basis(const bContext &C,
                             const View2D &v2d,
                             const SpaceNode &snode,
                             bNodeTree &ntree,
-                            const Span<float2> socket_locations,
                             const bNode &node,
                             uiBlock &block,
                             bNodeInstanceKey key)
@@ -2410,7 +2398,7 @@ static void node_draw_basis(const bContext &C,
 
   /* Skip slow socket drawing if zoom is small. */
   if (scale > 0.2f) {
-    node_draw_sockets(v2d, C, ntree, socket_locations, node, block, true, false);
+    node_draw_sockets(v2d, C, ntree, node, block, true, false);
   }
 
   /* Preview. */
@@ -2434,7 +2422,6 @@ static void node_draw_hidden(const bContext &C,
                              const View2D &v2d,
                              const SpaceNode &snode,
                              bNodeTree &ntree,
-                             const Span<float2> socket_locations,
                              bNode &node,
                              uiBlock &block)
 {
@@ -2604,7 +2591,7 @@ static void node_draw_hidden(const bContext &C,
   immUnbindProgram();
   GPU_blend(GPU_BLEND_NONE);
 
-  node_draw_sockets(v2d, C, ntree, socket_locations, node, block, true, false);
+  node_draw_sockets(v2d, C, ntree, node, block, true, false);
 
   UI_block_end(&C, &block);
   UI_block_draw(&C, &block);
@@ -2739,13 +2726,13 @@ static void frame_node_prepare_for_draw(bNode &node, Span<bNode *> nodes)
   node.runtime->totr = rect;
 }
 
-static void reroute_node_prepare_for_draw(bNode &node, MutableSpan<float2> socket_locations)
+static void reroute_node_prepare_for_draw(bNode &node)
 {
   const float2 loc = node_to_view(node, float2(0));
 
   /* Reroute node has exactly one input and one output, both in the same place. */
-  socket_locations[node.input_socket(0).index_in_tree()] = loc;
-  socket_locations[node.output_socket(0).index_in_tree()] = loc;
+  node.input_socket(0).runtime->location = loc;
+  node.output_socket(0).runtime->location = loc;
 
   const float size = 8.0f;
   node.width = size * 2;
@@ -2759,8 +2746,7 @@ static void node_update_nodetree(const bContext &C,
                                  TreeDrawContext &tree_draw_ctx,
                                  bNodeTree &ntree,
                                  Span<bNode *> nodes,
-                                 Span<uiBlock *> blocks,
-                                 MutableSpan<float2> socket_locations)
+                                 Span<uiBlock *> blocks)
 {
   /* Make sure socket "used" tags are correct, for displaying value buttons. */
   SpaceNode *snode = CTX_wm_space_node(&C);
@@ -2776,14 +2762,14 @@ static void node_update_nodetree(const bContext &C,
     }
 
     if (node.is_reroute()) {
-      reroute_node_prepare_for_draw(node, socket_locations);
+      reroute_node_prepare_for_draw(node);
     }
     else {
       if (node.flag & NODE_HIDDEN) {
-        node_update_hidden(node, block, socket_locations);
+        node_update_hidden(node, block);
       }
       else {
-        node_update_basis(C, tree_draw_ctx, ntree, node, block, socket_locations);
+        node_update_basis(C, tree_draw_ctx, ntree, node, block);
       }
     }
   }
@@ -2936,12 +2922,8 @@ static void frame_node_draw(const bContext &C,
   UI_block_draw(&C, &block);
 }
 
-static void reroute_node_draw(const bContext &C,
-                              ARegion &region,
-                              bNodeTree &ntree,
-                              const Span<float2> socket_locations,
-                              const bNode &node,
-                              uiBlock &block)
+static void reroute_node_draw(
+    const bContext &C, ARegion &region, bNodeTree &ntree, const bNode &node, uiBlock &block)
 {
   /* Skip if out of view. */
   const rctf &rct = node.runtime->totr;
@@ -2979,8 +2961,7 @@ static void reroute_node_draw(const bContext &C,
 
   /* Only draw input socket as they all are placed on the same position highlight
    * if node itself is selected, since we don't display the node body separately. */
-  node_draw_sockets(
-      region.v2d, C, ntree, socket_locations, node, block, false, node.flag & SELECT);
+  node_draw_sockets(region.v2d, C, ntree, node, block, false, node.flag & SELECT);
 
   UI_block_end(&C, &block);
   UI_block_draw(&C, &block);
@@ -2991,7 +2972,6 @@ static void node_draw(const bContext &C,
                       ARegion &region,
                       const SpaceNode &snode,
                       bNodeTree &ntree,
-                      const Span<float2> socket_locations,
                       bNode &node,
                       uiBlock &block,
                       bNodeInstanceKey key)
@@ -3000,15 +2980,15 @@ static void node_draw(const bContext &C,
     frame_node_draw(C, tree_draw_ctx, region, snode, ntree, node, block);
   }
   else if (node.is_reroute()) {
-    reroute_node_draw(C, region, ntree, socket_locations, node, block);
+    reroute_node_draw(C, region, ntree, node, block);
   }
   else {
     const View2D &v2d = region.v2d;
     if (node.flag & NODE_HIDDEN) {
-      node_draw_hidden(C, tree_draw_ctx, v2d, snode, ntree, socket_locations, node, block);
+      node_draw_hidden(C, tree_draw_ctx, v2d, snode, ntree, node, block);
     }
     else {
-      node_draw_basis(C, tree_draw_ctx, v2d, snode, ntree, socket_locations, node, block, key);
+      node_draw_basis(C, tree_draw_ctx, v2d, snode, ntree, node, block, key);
     }
   }
 }
@@ -3020,7 +3000,6 @@ static void node_draw_nodetree(const bContext &C,
                                ARegion &region,
                                SpaceNode &snode,
                                bNodeTree &ntree,
-                               const Span<float2> socket_locations,
                                Span<bNode *> nodes,
                                Span<uiBlock *> blocks,
                                bNodeInstanceKey parent_key)
@@ -3042,8 +3021,7 @@ static void node_draw_nodetree(const bContext &C,
     }
 
     const bNodeInstanceKey key = BKE_node_instance_key(parent_key, &ntree, nodes[i]);
-    node_draw(
-        C, tree_draw_ctx, region, snode, ntree, socket_locations, *nodes[i], *blocks[i], key);
+    node_draw(C, tree_draw_ctx, region, snode, ntree, *nodes[i], *blocks[i], key);
   }
 
   /* Node lines. */
@@ -3073,8 +3051,7 @@ static void node_draw_nodetree(const bContext &C,
     }
 
     const bNodeInstanceKey key = BKE_node_instance_key(parent_key, &ntree, nodes[i]);
-    node_draw(
-        C, tree_draw_ctx, region, snode, ntree, socket_locations, *nodes[i], *blocks[i], key);
+    node_draw(C, tree_draw_ctx, region, snode, ntree, *nodes[i], *blocks[i], key);
   }
 }
 
@@ -3181,19 +3158,9 @@ static void draw_nodetree(const bContext &C,
   else if (ntree.type == NTREE_COMPOSIT) {
     tree_draw_ctx.used_by_realtime_compositor = realtime_compositor_is_in_use(C);
   }
-  ntree.runtime->all_socket_locations.reinitialize(ntree.all_sockets().size());
 
-  node_update_nodetree(
-      C, tree_draw_ctx, ntree, nodes, blocks, ntree.runtime->all_socket_locations);
-  node_draw_nodetree(C,
-                     tree_draw_ctx,
-                     region,
-                     *snode,
-                     ntree,
-                     ntree.runtime->all_socket_locations,
-                     nodes,
-                     blocks,
-                     parent_key);
+  node_update_nodetree(C, tree_draw_ctx, ntree, nodes, blocks);
+  node_draw_nodetree(C, tree_draw_ctx, region, *snode, ntree, nodes, blocks, parent_key);
 }
 
 /**
