source/blender/editors/space_node/node_intern.hh
@@ -247,13 +247,10 @@ void node_draw_link_bezier(const bContext &C,
                            int th_col3,
                            bool selected);
 
-void node_link_bezier_points_evaluated(Span<float2> all_socket_locations,
-                                       const bNodeLink &link,
+void node_link_bezier_points_evaluated(const bNodeLink &link,
                                        std::array<float2, NODE_LINK_RESOL + 1> &coords);
 
-std::optional<float2> link_path_intersection(Span<float2> socket_locations,
-                                             const bNodeLink &link,
-                                             Span<float2> path);
+std::optional<float2> link_path_intersection(const bNodeLink &link, Span<float2> path);
 
 void draw_nodespace_back_pix(const bContext &C,
                              ARegion &region,
@@ -325,12 +322,8 @@ int node_render_changed_exec(bContext *, wmOperator *);
 bNodeSocket *node_find_indicated_socket(SpaceNode &snode,
                                         const float2 &cursor,
                                         eNodeSocketInOut in_out);
-float node_link_dim_factor(Span<float2> socket_locations,
-                           const View2D &v2d,
-                           const bNodeLink &link);
-bool node_link_is_hidden_or_dimmed(Span<float2> socket_locations,
-                                   const View2D &v2d,
-                                   const bNodeLink &link);
+float node_link_dim_factor(const View2D &v2d, const bNodeLink &link);
+bool node_link_is_hidden_or_dimmed(const View2D &v2d, const bNodeLink &link);
 
 void NODE_OT_duplicate(wmOperatorType *ot);
 void NODE_OT_delete(wmOperatorType *ot);
